recycling-bin/2026-04-21-repo-cleanup/tmp/phase8-stream-validation/objects/sunrun_projects__dll/sunrun_projects__dll.object-meta.xml
<CustomObject>
    <label>sunrun_projects</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Other</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>