recycling-bin/2026-04-21-repo-cleanup/tmp/phase8-stream-validation/objects/sunrun_projects__dll/fields/affiliate_equipment_cost_estimate__c.field-meta.xml
<CustomField>
    <fullName>affiliate_equipment_cost_estimate__c</fullName>
    <label>affiliate_equipment_cost_estimate</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>affiliate_equipment_cost_estimate</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>