recycling-bin/2026-04-21-repo-cleanup/tmp/phase8-stream-validation/objects/sunrun_projects__dll/fields/cancellation_date__c.field-meta.xml
<CustomField>
    <fullName>cancellation_date__c</fullName>
    <label>cancellation_date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>cancellation_date</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>